@@ -54,6 +54,7 @@ New features:
 - Make "Destination reached." command a non-debug message when you arrive
   at a manually input destination.
 - Implemented "That person is too far from you to trade." error message.
+- _whenWeaponEquipped _whenShieldEquipped conditions.
 
 New commands:
 - storage log
